--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,12 @@ nav {
     padding: 10px 20px;
 }
 
-.nav-links a {
+.nav-left, .nav-right {
+    display: flex;
+    align-items: center;
+}
+
+.nav-right a {
     margin: 0 10px;
     text-decoration: none;
     color: #555;
@@ -36,6 +41,7 @@ nav {
     border: none;
     cursor: pointer;
     font-size: 18px;
+    margin-left: 10px;
 }
 
 /* Header Title */
@@ -45,6 +51,26 @@ h1 {
     font-weight: bold;
     letter-spacing: 5px;
     text-transform: uppercase;
+    position: relative;
+    display: inline-block;
+}
+
+h1::before,
+h1::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #333;
+    left: 0;
+}
+
+h1::before {
+    top: -10px;
+}
+
+h1::after {
+    bottom: -10px;
 }
 
 /* Section Projects */
@@ -64,6 +90,17 @@ h2 {
     gap: 20px;
 }
 
+.project-row {
+    display: flex;
+    gap: 20px; /* Ajusta el espacio entre los proyectos según sea necesario */
+}
+
+.project-small, .project-large {
+    padding: 20px; /* Ajusta el padding según sea necesario */
+    border: 1px solid #ccc; /* Opcional: agrega un borde para mejor visualización */
+    border-radius: 8px; /* Opcional: agrega bordes redondeados */
+}
+
 article {
     background: #fff;
     border-radius: 8px;
@@ -78,8 +115,13 @@ article:hover {
 
 article img {
     width: 100%;
-    height: 200px;
+    height: 200px; /* Ajusta la altura según sea necesario */
     object-fit: cover;
+    border-radius: 8px 8px 0 0; /* Opcional: bordes redondeados solo en la parte superior */
+}
+
+.project-large img {
+    height: 400px; /* Ajusta la altura del proyecto grande según sea necesario */
 }
 
 .project-content {
@@ -139,12 +181,17 @@ body.dark-mode header {
     background-color: #444;
 }
 
-body.dark-mode .nav-links a {
+body.dark-mode .nav-right a {
     color: #ddd;
 }
 
 body.dark-mode .theme-toggle {
     color: #fff;
+}
+
+body.dark-mode h1::before,
+body.dark-mode h1::after {
+    background-color: #fff;
 }
 
 body.dark-mode .project-content h3 {
