--- a/styles.css
+++ b/styles.css
@@ -108,6 +108,11 @@ h2 {
     margin: 20px 0;
 }
 
+h4 {
+    font-size: 3vw;  /* Tamaño de la fuente adaptable */
+    margin: 20px 0;
+}
+
 
 /* Estilo para la grilla de las publicaciones recientes */
 .parent {
@@ -480,4 +485,73 @@ body.dark-mode footer a {
     .post-content p {
         font-size: 0.8vw;
     }
+}
+
+.newsletter {
+    font-family: 'Inter', sans-serif;
+    background-color: #f9f9f9; /* Fondo oscuro */
+    color: #000000; /* Texto blanco */
+    text-align: center;
+    padding: 40px;
+    border-radius: 10px;
+    max-width: 700px;
+    margin: auto;
+}
+
+.newsletter h4 {
+    font-size: 28px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.newsletter p {
+    font-size: 16px;
+    margin-bottom: 20px;
+    color: #bbbbbb;
+}
+
+.newsletter form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.newsletter input {
+    font-family: 'Inter', sans-serif;
+    padding: 12px;
+    width: 250px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+.newsletter button {
+    background-color: #8b5cf6; /* Color morado */
+    color: white;
+    border: none;
+    padding: 12px 20px;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background 0.3s ease;
+}
+
+.newsletter button:hover {
+    background-color: #6d28d9; /* Un poco más oscuro en hover */
+}
+
+.privacy {
+    margin-top: 10px;
+    font-size: 14px;
+    color: #bbbbbb;
+}
+
+.privacy a {
+    color: #8b5cf6;
+    text-decoration: none;
+}
+
+.privacy a:hover {
+    text-decoration: underline;
 }
