--- a/styles.css
+++ b/styles.css
@@ -494,15 +494,21 @@ body.dark-mode footer a {
 }
 
 .newsletter {
-    font-family: 'Inter', sans-serif;
-    background-color: #f9f9f9; /* Fondo oscuro */
-    color: #000000; /* Texto blanco */
+    background-color: #fff; /* Fondo oscuro */
     text-align: center;
     padding: 40px;
     border-radius: 10px;
     max-width: 700px;
     margin: auto;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
 }
+
+/* Modo oscuro para los artículos */
+body.dark-mode .newsletter {
+    background: #333; /* Fondo oscuro en los artículos */
+    color: #fff; /* Texto blanco */
+}
+
 
 .newsletter h4 {
     font-size: 28px;
@@ -513,7 +519,6 @@ body.dark-mode footer a {
 .newsletter p {
     font-size: 16px;
     margin-bottom: 20px;
-    color: #bbbbbb;
 }
 
 .newsletter form {
@@ -527,7 +532,6 @@ body.dark-mode footer a {
     font-family: 'Inter', sans-serif;
     padding: 12px;
     width: 250px;
-    border: none;
     border-radius: 5px;
     font-size: 16px;
 }
@@ -535,7 +539,6 @@ body.dark-mode footer a {
 .newsletter button {
     background-color: #8b5cf6; /* Color morado */
     color: white;
-    border: none;
     padding: 12px 20px;
     font-size: 16px;
     border-radius: 5px;
@@ -550,7 +553,6 @@ body.dark-mode footer a {
 .privacy {
     margin-top: 10px;
     font-size: 14px;
-    color: #bbbbbb;
 }
 
 .privacy a {
@@ -565,4 +567,58 @@ body.dark-mode footer a {
 h4 {
     font-size: 3vw;  /* Tamaño de la fuente adaptable */
     margin: 20px 0;
+}
+
+.profile-image {
+    text-align: center;
+    align-content: stretch;
+    padding: 20px;
+}
+
+.profile-image img {
+    width: 100%;
+}
+
+.p-about, .p-skills, .p-experience, .p-education {
+    margin: 0px 40px;
+}
+
+/* Modo oscuro para el título */
+body.dark-mode h1 {
+    color: #fff;
+}
+
+/* Ajuste de la imagen de perfil */
+.profile-image {
+    text-align: center;
+    padding: 20px;
+}
+
+.profile-image img {
+    width: 100%;
+    transition: border-color 0.3s ease;
+}
+
+/* Modo oscuro para la imagen de perfil */
+body.dark-mode .profile-image img {
+    border-color: #fff;
+}
+
+/* Estilos para listas */
+.p-skills, .p-experience, .p-education {
+    padding: 0;
+    list-style-type: none;
+}
+
+.skills li, .experience li, .education li {
+    padding: 10px;
+    border-left: 3px solid #6d28d9;
+    margin-bottom: 10px;
+}
+
+/* Modo oscuro para listas */
+body.dark-mode .skills li, 
+body.dark-mode .experience li, 
+body.dark-mode .education li {
+    border-left: 3px solid #6d28d9;
 }
