--- a/styles.css
+++ b/styles.css
@@ -1,110 +1,143 @@
 /* General styles for the body */
+html {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 body {
-    font-family: 'Inter', sans-serif;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 80%;
     margin: 0;
     padding: 0;
+}
+
+body,
+body *:not(.newsletter *) {
+    font-family: 'Inter', sans-serif;
     background-color: #f9f9f9;
-    color: #333;
+    color: #121212;
 }
 
 /* Modo Oscuro */
-body.dark-mode {
-    background-color: #121212; /* Fondo oscuro */
-    color: #fff; /* Texto claro */
+body.dark-mode,
+body.dark-mode *:not(.footer *, .tags *, .newsletter *) {
+    background-color: #121212;
+    /* Fondo oscuro */
+    color: #fff;
+    /* Texto claro */
 }
-
 
 /* Contenedor principal */
-.container {
-    width: 90%;             /* Ocupa el 90% del ancho de la pantalla */
-    margin: 0 auto;         /* Centra el contenedor horizontalmente */
-    padding: 0 20px;        /* Espaciado a los lados */
-}
+
 
 /* Header y navegación */
 header {
-    padding: 20px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+header * {
     text-align: center;
 }
 
 nav {
+    width: 100%;
     display: flex;
-    justify-content: space-between;  /* Alinea el logo a la izquierda y los demás elementos a la derecha */
+    justify-content: space-between;
+    /* Alinea el logo a la izquierda y los demás elementos a la derecha */
     align-items: center;
-    padding: 20px 40px;
+    padding: 20px 0px;
+}
+
+.menu-button {
+    display: none;
 }
 
 .nav-links {
     display: flex;
     gap: 20px;
-    margin-left: auto;  /* Esto empuja los enlaces de navegación hacia la derecha */
-    margin-right: 1%;
+    font-size: max(1vw, 25px);
+}
+
+.menu-button,
+.nav-links {
+    margin-left: 50px;
 }
 
 .nav-links a {
     text-decoration: none;
-    color: #333;
-    font-size: 1rem;
     font-weight: 500;
     transition: color 0.3s;
 }
 
-/* Estilos para el modo oscuro */
-body.dark-mode .nav-links a {
-    color: #fff; /* En modo oscuro, los enlaces se vuelven blancos */
-}
+
 
 .nav-links a:hover {
-    color: #007bff; /* Agregar un color de hover para los enlaces */
+    color: #007bff;
+    /* Agregar un color de hover para los enlaces */
 }
 
 .logo {
-    font-size: 1.5rem;
+    font-size: max(3vw, 30px);
     font-weight: bold;
     color: #333;
 }
 
-body.dark-mode .logo {
-    color: #fff; /* En modo oscuro, los enlaces se vuelven blancos */
-}
+
 
 /* Estilos para el título principal */
 h1 {
-    font-size: 15vw;  /* Usamos un tamaño relativo basado en el ancho de la pantalla */
+    font-size: max(10vw, 100px);
+    /* Usamos un tamaño relativo basado en el ancho de la pantalla */
     font-weight: bold;
     margin: 10px 0;
     position: relative;
-    display: inline-block;
-    width: 100%;
 }
 
 h1:before,
 h1:after {
+    align-items: center;
     content: "";
     position: absolute;
     width: 100%;
-    height: 2px;  /* Grosor de la línea */
-    background-color: #c4c4c4;  /* Color de la línea */
+    height: 2px;
+    /* Grosor de la línea */
+    background-color: #c4c4c4;
+    /* Color de la línea */
     left: 0;
 }
 
 h1:before {
-    top: -10px;  /* Línea arriba */
+    top: -10px;
+    /* Línea arriba */
 }
 
 h1:after {
-    bottom: -10px;  /* Línea abajo */
+    bottom: -10px;
+    /* Línea abajo */
 }
 
-/* Modo oscuro para el título */
-body.dark-mode h1:before,
-body.dark-mode h1:after {
-    background-color: #fff; /* Líneas blancas en modo oscuro */
+.recent-post {
+
+    width: 100%;
+    display: flex;
+    text-align: center;
 }
 
 /* Estilos para los subtítulos */
 h2 {
-    font-size: 1.5vw;  /* Tamaño de la fuente adaptable */
+    text-align: center;
+    font-size: min(8vw, 40px);
+    /* Tamaño de la fuente adaptable */
     margin: 20px;
 }
 
@@ -112,94 +145,103 @@ h2 {
 /* Estilo para la grilla de las publicaciones recientes */
 .parent {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);  /* 6 columnas de igual tamaño */
-    grid-template-rows: repeat(9, 1fr);     /* 9 filas de igual tamaño */
-    grid-column-gap: 20px;  /* Espacio entre columnas */
-    grid-row-gap: 20px;     /* Espacio entre filas */
-    margin: 20px;
+    grid-template-columns: repeat(6, 1fr);
+    /* 6 columnas de igual tamaño */
+    grid-template-rows: repeat(9, 1fr);
+    /* 9 filas de igual tamaño */
+    grid-column-gap: 2vh;
+    /* Espacio entre columnas */
+    grid-row-gap: 2vh;
+    /* Espacio entre filas */
+    margin: 2vh 0;
     align-content: stretch;
 }
 
 /* Cada publicación ocupa un área específica dentro de la grilla */
-.div1 { 
-    grid-area: 1 / 1 / 7 / 4; /* Ocupa las filas 1-7 y las columnas 1-4 */
+.div1 {
+    grid-area: 1 / 1 / 7 / 4;
+    /* Ocupa las filas 1-7 y las columnas 1-4 */
 }
 
-.div2 { 
-    grid-area: 1 / 4 / 4 / 7; /* Ocupa las filas 1-4 y las columnas 4-7 */
+.div2 {
+    grid-area: 1 / 4 / 4 / 7;
+    /* Ocupa las filas 1-4 y las columnas 4-7 */
 }
 
-.div3 { 
-    grid-area: 4 / 4 / 7 / 7; /* Ocupa las filas 4-7 y las columnas 4-7 */
+.div3 {
+    grid-area: 4 / 4 / 7 / 7;
+    /* Ocupa las filas 4-7 y las columnas 4-7 */
 }
 
-.div4 { 
-    grid-area: 7 / 1 / 10 / 7; /* Ocupa las filas 7-10 y las columnas 1-7 */
+.div4 {
+    grid-area: 7 / 1 / 10 / 7;
+    /* Ocupa las filas 7-10 y las columnas 1-7 */
 }
 
 .all-posts .parent {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr); /* 3 columnas para las publicaciones */
-    gap: 20px;
-    margin: 20px;
-    grid-template-rows: auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    
+
+    /* 3 columnas para las publicaciones */
 }
 
-.article-first {
+.all-posts .parent .article {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width:  300px;/* 3 columnas para las publicaciones */
+}
+
+
+
+
+/* Modo oscuro para los artículos */
+body.dark-mode .article,
+body.dark-mode .article *:not(.tags *, .newsletter *) {
+    background: #333;
+    /* Fondo oscuro en los artículos */
+}
+
+body.dark-mode .article .post-content h3 {
+    color: #fff;
+    /* Título blanco en modo oscuro */
+}
+
+body.dark-mode .article .post-content p {
+    color: #bbb;
+    /* Texto gris claro en el contenido */
+}
+
+body.dark-mode .article .post-content .author {
+    color: #888;
+    /* Autor gris claro en modo oscuro */
+}
+
+.article.vertical {
     background: #fff;
     border-radius: 8px;
     overflow: hidden;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     display: flex;
-    flex-direction: column;   /* Imagen en la parte superior y texto debajo */
+    flex-direction: column;
+    /* Imagen en la parte superior y texto debajo */
     height: 100%;
-    
+
 }
 
-/* Modo oscuro para los artículos */
-body.dark-mode .article-first {
-    background: #333; /* Fondo oscuro en los artículos */
-    color: #fff; /* Texto blanco */
+.article.vertical img {
+    width: 100%;
+    /* La imagen ocupa todo el ancho */
+    height: 50%;
+    /* La imagen ocupa el 50% de la altura del contenedor */
+    max-height: 15rem;
 }
 
-body.dark-mode .article-first .post-content h3 {
-    color: #fff; /* Título blanco en modo oscuro */
-}
-
-body.dark-mode .article-first .post-content p {
-    color: #bbb; /* Texto gris claro en el contenido */
-}
-
-body.dark-mode .article-first .post-content .author {
-    color: #888; /* Autor gris claro en modo oscuro */
-}
-
-/* Modo oscuro para los artículos */
-body.dark-mode .article-second {
-    background: #333; /* Fondo oscuro en los artículos */
-    color: #fff; /* Texto blanco */
-}
-
-body.dark-mode .article-second .post-content h3 {
-    color: #fff; /* Título blanco en modo oscuro */
-}
-
-body.dark-mode .article-second .post-content p {
-    color: #bbb; /* Texto gris claro en el contenido */
-}
-
-body.dark-mode .article-second .post-content .author {
-    color: #888; /* Autor gris claro en modo oscuro */
-}
-
-.article-first img {
-    width: 100%; /* La imagen ocupa todo el ancho */
-    height: 50%; /* La imagen ocupa el 50% de la altura del contenedor */
-    object-fit: cover;
-    max-height: 20rem;
-}
-
-.article-first .post-content {
+.article.vertical .post-content {
     height: 50%;
     display: flex;
     flex-direction: column;
@@ -207,96 +249,62 @@ body.dark-mode .article-second .post-content .author {
     padding: 20px;
 }
 
-.article-first .post-content h3 {
-    font-size: 1.2rem;
+.article .post-content h3 {
+    font-size: max(1vw, 20px);
     margin: 10px 0;
     font-weight: bold;
     color: #333;
 }
+.all-posts .article .post-content h3 {
+    text-align: center;
+}
 
-.article-first .post-content p {
-    font-size: 0.9rem;
+.article .post-content p, .author, .tags * {
+    font-size:max(0.7vw, 15px);
     color: #666;
     margin-bottom: 10px;
 }
 
-.article-first .post-content .author {
-    font-size: 0.8rem;
-    color: #999;
-}
-
-.article-first .tags {
-    display: flex;
-    gap: 8px;
-    margin-top: 10px;
-}
-
-.article-first .tags span {
+.article .tags span {
     padding: 5px 10px;
-    font-size: 0.8rem;
     border-radius: 20px;
     display: inline-block;
 }
 
 /* Estilo para la distribución de la imagen en la segunda tarjeta */
-.article-second {
+.article.horizontal {
     background: #fff;
     border-radius: 8px;
     overflow: hidden;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    display: flex;  /* Aquí los ponemos en una fila (imagen + texto) */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    /* Aquí los ponemos en una fila (imagen + texto) */
     flex-direction: row;
     height: 100%;
-    align-items: stretch; 
-    max-height: 15rem;
+    align-items: stretch;
+    max-height: 20rem;
 }
 
-.article-second img {
-    width: 50%; /* La imagen ocupa el 50% del ancho */
-    height: 100%; /* La imagen ocupa el 100% de la altura */
-    object-fit: cover; /* Ajusta la imagen sin deformarla */
-    border-radius: 0; 
-    max-width: 100%;  /* No puede ser más ancho que el padre */
+.article.horizontal img {
+    width: 50%;
+    /* La imagen ocupa el 50% del ancho */
+    height: 100%;
+    /* La imagen ocupa el 100% de la altura */
+    object-fit: cover;
+    /* Ajusta la imagen sin deformarla */
+    border-radius: 0;
+    max-width: 100%;
+    /* No puede ser más ancho que el padre */
     max-height: 100%;
 }
 
-.article-second .post-content {
+.article.horizontal .post-content {
     width: 50%;
     display: flex;
     flex-direction: column;
     padding: 20px;
     justify-content: space-evenly;
-}
-
-.article-second .post-content h3 {
-    font-size: 1.2rem;
-    margin: 10px 0;
-    font-weight: bold;
-    color: #333;
-}
-
-.article-second .post-content p {
-    font-size: 0.9rem;
-    color: #666;
-    margin-bottom: 10px;
-}
-
-.article-second .post-content .author {
-    font-size: 0.8rem;
-    color: #999;
-}
-
-.article-second .tags {
-    display: flex;
-    gap: 8px;
-    margin-top: 10px;
-}
-
-.article-second .tags span {
-    padding: 5px 10px;
-    font-size: 0.8rem;
-    border-radius: 20px;
-    display: inline-block;
+    padding: 1%;
 }
 
 .tags .design {
@@ -319,11 +327,7 @@ body.dark-mode .article-second .post-content .author {
     color: #005810;
 }
 
-.full-width {
-    grid-column: span 3;
-    display: flex;
-    flex-direction: column;
-}
+
 
 /* Estilo de pie de página */
 footer {
@@ -341,12 +345,15 @@ footer a {
 
 /* Modo oscuro para el pie de página */
 body.dark-mode footer {
-    background: #333; /* Fondo oscuro en el pie de página */
-    color: #fff; /* Texto blanco */
+    background: #333;
+    /* Fondo oscuro en el pie de página */
+    color: #fff;
+    /* Texto blanco */
 }
 
 body.dark-mode footer a {
-    color: #fff; /* Enlaces blancos en el pie de página */
+    color: #fff;
+    /* Enlaces blancos en el pie de página */
 }
 
 /* Estilo del toggle (sin cambios) */
@@ -367,8 +374,8 @@ body.dark-mode footer a {
     width: 3em;
     height: 1.5em;
     transition:
-      background-color 0.1s 0.3s ease-out,
-      box-shadow 0.1s 0.3s ease-out;
+        background-color 0.1s 0.3s ease-out,
+        box-shadow 0.1s 0.3s ease-out;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
@@ -386,24 +393,23 @@ body.dark-mode footer a {
     width: 1.2em;
     height: 1.2em;
     transition:
-      background-color 0.1s 0.3s ease-out,
-      transform 0.3s ease-out;
+        background-color 0.1s 0.3s ease-out,
+        transform 0.3s ease-out;
     z-index: 1;
 }
 
 .l:after {
     background:
-      linear-gradient(transparent 50%, rgba(0, 0, 0, 0.15) 0) 0 50% / 50% 100%,
-      repeating-linear-gradient(90deg, #bbb 0, #bbb, #bbb 20%, #999 20%, #999 40%)
-        0 50% / 50% 100%,
-      radial-gradient(circle at 50% 50%, #888 25%, transparent 26%);
+        linear-gradient(transparent 50%, rgba(0, 0, 0, 0.15) 0) 0 50% / 50% 100%,
+        repeating-linear-gradient(90deg, #bbb 0, #bbb, #bbb 20%, #999 20%, #999 40%) 0 50% / 50% 100%,
+        radial-gradient(circle at 50% 50%, #888 25%, transparent 26%);
     background-repeat: no-repeat;
     border: 0.25em solid transparent;
     border-left: 0.4em solid #d8d8d8;
     border-right: 0 solid transparent;
     transition:
-      border-left-color 0.1s 0.3s ease-out,
-      transform 0.3s ease-out;
+        border-left-color 0.1s 0.3s ease-out,
+        transform 0.3s ease-out;
     transform: translateX(-22.5%);
     transform-origin: 25% 50%;
     width: 1.2em;
@@ -435,78 +441,57 @@ body.dark-mode footer a {
 
 /* Para pantallas pequeñas (móviles) */
 @media (max-width: 768px) {
-    h1 {
-        font-size: 25vw;  /* Reducir tamaño de fuente en móviles */
+    .nav-links {
+        display: none;
     }
 
-    h2 {
-        font-size: 3vw;   /* Reducir tamaño de h2 en móviles */
+    p {
+        max-height: 80px; /* Limita la altura */
+        overflow: hidden;  /* Oculta el texto extra */
+        text-overflow: ellipsis; /* Agrega "..." al final */
+    }
+    
+
+    .menu-button {
+        display: block;
+        cursor: pointer;
+        border: none;
     }
 
-    .parent {
-        grid-template-columns: 1fr; /* Una sola columna en pantallas pequeñas */
+    .parent > * {
+        width: 100%;
+        height: 350px;
     }
 
-    .div1, .div2, .div3, .div4 {
-        grid-area: unset;  /* Desactivamos las áreas fijas */
-        margin-bottom: 20px;
+
+    .parent, .all-posts .parent {
+        display: flex;
+        flex-wrap: wrap;
+        /* Una sola columna en pantallas pequeñas */
     }
 
-    article {
-        flex-direction: column; /* En pantallas pequeñas, la imagen está encima del contenido */
-    }
 
-    article img {
-        margin-bottom: 10px;
-    }
 
-    .post-content h3 {
-        font-size: 1.5rem;
-    }
 
-    .post-content p {
-        font-size: 1rem;
-    }
-}
-
-/* Para pantallas grandes */
-@media (min-width: 1024px) {
-    h1 {
-        font-size: 10
-        5vw;  /* Ajustar el tamaño de la fuente */
-    }
-
-    h2 {
-        font-size: 1 vw;  /* Ajustar tamaño de h2 */
-    }
-
-    .posts-grid {
-        grid-template-columns: repeat(3, 1fr); /* 3 columnas en pantallas grandes */
-    }
-
-    .post-content h3 {
-        font-size: 1vw;
-    }
-
-    .post-content p {
-        font-size: 0.8vw;
-    }
 }
 
 .newsletter {
-    background-color: #fff; /* Fondo oscuro */
+    background-color: #fff;
+    /* Fondo oscuro */
     text-align: center;
     padding: 40px;
     border-radius: 10px;
     max-width: 700px;
     margin: auto;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 /* Modo oscuro para los artículos */
 body.dark-mode .newsletter {
-    background: #333; /* Fondo oscuro en los artículos */
-    color: #fff; /* Texto blanco */
+    background: #333;
+    /* Fondo oscuro en los artículos */
+    color: #fff;
+    /* Texto blanco */
 }
 
 
@@ -519,10 +504,12 @@ body.dark-mode .newsletter {
 .newsletter p {
     font-size: 16px;
     margin-bottom: 20px;
+    color: #bbbbbb;
 }
 
 .newsletter form {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     gap: 10px;
@@ -531,14 +518,17 @@ body.dark-mode .newsletter {
 .newsletter input {
     font-family: 'Inter', sans-serif;
     padding: 12px;
-    width: 250px;
+    width: min(100%, 250px);
     border-radius: 5px;
     font-size: 16px;
 }
 
 .newsletter button {
-    background-color: #8b5cf6; /* Color morado */
+    background-color: #8b5cf6;
+    /* Color morado */
+    width: min(75%, 150px);
     color: white;
+    border: none;
     padding: 12px 20px;
     font-size: 16px;
     border-radius: 5px;
@@ -547,12 +537,14 @@ body.dark-mode .newsletter {
 }
 
 .newsletter button:hover {
-    background-color: #6d28d9; /* Un poco más oscuro en hover */
+    background-color: #6d28d9;
+    /* Un poco más oscuro en hover */
 }
 
 .privacy {
     margin-top: 10px;
     font-size: 14px;
+    color: #bbbbbb;
 }
 
 .privacy a {
@@ -565,7 +557,8 @@ body.dark-mode .newsletter {
 }
 
 h4 {
-    font-size: 3vw;  /* Tamaño de la fuente adaptable */
+    font-size: 3vw;
+    /* Tamaño de la fuente adaptable */
     margin: 20px 0;
 }
 
@@ -579,7 +572,10 @@ h4 {
     width: 100%;
 }
 
-.p-about, .p-skills, .p-experience, .p-education {
+.p-about,
+.p-skills,
+.p-experience,
+.p-education {
     margin: 0px 40px;
 }
 
@@ -605,20 +601,31 @@ body.dark-mode .profile-image img {
 }
 
 /* Estilos para listas */
-.p-skills, .p-experience, .p-education {
+.p-skills,
+.p-experience,
+.p-education {
     padding: 0;
     list-style-type: none;
 }
 
-.skills li, .experience li, .education li {
+.skills li,
+.experience li,
+.education li {
     padding: 10px;
     border-left: 3px solid #6d28d9;
     margin-bottom: 10px;
 }
 
 /* Modo oscuro para listas */
-body.dark-mode .skills li, 
-body.dark-mode .experience li, 
+body.dark-mode .skills li,
+body.dark-mode .experience li,
 body.dark-mode .education li {
     border-left: 3px solid #6d28d9;
+}
+
+.all-posts .creators img {
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 50%;
 }
